// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Button render correctly 1`] = `
<button
  className="custom-button undefined btn btn-primary"
  data-testid="btn-test"
  disabled={false}
  type="button"
/>
`;

exports[`Button component Button with value render correctly 1`] = `
<button
  className="custom-button undefined btn btn-primary"
  data-testid="btn-test"
  disabled={false}
  type="button"
  value="some value"
/>
`;
